<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>
    <string name="text_button_upcoming">Upcoming Elections</string>
    <string name="text_button_find">Find my Representatives</string>
    <string name="desc_launch_icon">Launch logo. Picture of a person voting</string>
    <string name="desc_loading_bar">Loading Animation</string>
    <string name="text_header_upcoming">Upcoming Elections</string>
    <string name="text_header_saved">Saved Elections</string>
    <string name="text_button_follow">Follow Election</string>
    <string name="text_button_unfollow">Unfollow Election</string>

    <string name="text_header_election_info">Election Information</string>
    <string name="text_polling_locations">Polling Locations</string>
    <string name="text_ballot_info">Ballot Information</string>
    <string name="text_correspondence_address">Correspondence Address</string>

    <string name="text_search_header">Representative Search</string>
    <string name="hint_address1">Address Line 1</string>
    <string name="hint_address2">Address Line 2</string>
    <string name="hint_address_city">City</string>
    <string name="hint_address_zip">Zip</string>

    <string name="text_button_find_representative">Find my Representative</string>
    <string name="text_button_use_location">Use my location</string>
    <string name="text_header_my_representative">My Representatives</string>

    <string name="error_in_address">Please complete the address before searching</string>
    <string name="error_no_connection">Please connect to the internet in order to use this function</string>
    <string name="error_no_permission">Please enable location permissions to use this feature</string>
    <string name="permission_title">Location Permission</string>
    <string name="permission_description">Please enable precise location permissions to get your current address</string>
    <string name="permission_fine_missing">Please enable the precise location as well, course is not enough</string>

</resources>
